<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fio_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fio_txt" />

    <EditText
        android:id="@+id/fio_input_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/birthday_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday_txt" />

    <EditText
        android:id="@+id/birthday_input_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage" />

    <TextView
        android:id="@+id/passport_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passport_txt" />

    <EditText
        android:id="@+id/passport_input_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage" />

    <TextView
        android:id="@+id/medical_data_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medical_data_txt" />

    <EditText
        android:id="@+id/medical_data_input_txt"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save_data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSaveBtnClick"
        android:text="@string/save_data_btn_txt" />

</LinearLayout>